--- a/index.html
+++ b/index.html
@@ -14,18 +14,20 @@
         <main class="container">
             <form id="user-input">
                 <label for="parkState">Which state would you like to search Parks in?</label>
-                <input type="text" id="js-parkState" class="parkState-input" placeholder="FL">
+                <input type="text" id="js-parkState" class="parkState-input" placeholder="FL,WA,CA">
                 <label for="maxResults">How many parks would you like to seach?</label>
                 <input type="number" id="js-maxResults" class="maxResults-input" default="10">
+                <label for="searchTerm">What term would you like to search?</label>
+                <input type="text" id="js-searchTerm" class="searchTerm-input">
                 <button type="submit" id="input-button" class="submit button">Search Parks</button>
-
-                <section id="results hidden">
-                    <h3>Here are some of the parks nearby:</h3>
-                    <ul id="results-list">
-                    </ul>
-                    <p id="js-error-message"></p>
-                </section>
             </form>
+            <section id="results hidden">
+                <h3>Here are some of the parks nearby:</h3>
+                <ul id="results-list">
+                </ul>
+                <p id="js-error-message"></p>
+            </section>
+            
         </main>
         <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
         <script src="index.js"></script>
