--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <input type="text" id="js-searchTerm" class="searchTerm-input">
                 <button type="submit" id="input-button" class="submit button">Search Parks</button>
             </form>
-            <section id="results hidden">
+            <section id="results" class="hidden">
                 <h3>Here are some of the parks nearby:</h3>
                 <ul id="results-list">
                 </ul>
