fixing results display

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <button type="submit" id="input-button" class="submit button">Search Parks</button>
             
             </form>
-            <section id="results" class="hidden">
+            <section id="results">
                 <h3>Here are some of the parks nearby:</h3>
                 <ul id="results-list">
                 </ul>
